# led-arrangements

./: Cargo.toml  README.md  demo.mov
src/: color.rs  error.rs  lib.rs  loc.rs  main.rs  math.rs  ntree.rs
src/arrangement/: arrangement.rs  arrangement_config.rs  light_arrangement.rs  mod.rs
src/builder/: mod.rs
src/light_strip/: mod.rs  test_strip.rs  ws281x_strip.rs
src/ntree/: intersection.rs  mod.rs  spatial_data_tree.rs
src/strip_builder/: mod.rs
test_files/: test.csv
