[package]
name = "led-arrangements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.4.4"
kiss3d = { version = "0.35.0", optional = true }
palette = "0.6.1"
tpntree = "0.5.2"

[features]
visualizer = ["dep:kiss3d"]
